fixed overflow for tires. added scroll for tire-enum

--- a/tires/css/tires.css
+++ b/tires/css/tires.css
@@ -1,3 +1,7 @@
+body{
+	overflow: hidden;
+}
+
 .link a{
 	color:#fff;
 }
@@ -9,9 +13,10 @@
 #tire_enum{
 	float:left; 
 	width:78%; 
-	height: 400px; 
+	max-height: 400px; 
 	opacity:0.9;
 	margin-left: 10px;
+	overflow: auto;
 }
 
 .tire-enum-item{
